--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,24 +1,29 @@
 name: Generate Snake
 
 on:
-  schedule: # Runs every 24 hours
-    - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"   # daily
   workflow_dispatch:
+
+permissions:
+  contents: write        # allow pushing files (required)
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Generate Snake
-        uses: Platane/snk@v3
+      - name: Generate snake (SVG only)
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: herculoxz
-          outputs: dist/snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
 
-      - name: Push Snake Animation
+      - name: Deploy generated SVG to 'output' branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
